# Dashboard-Elektra

./: Home.py  README.md  pyproject.toml
pages/: Información general.py  tab1.py  tab2.py  tab3.py
queries/: correlacion_voc_isc.sql  distribucion_pmax.sql  query1.sql  query2.sql  query_analizadores.sql  query_evolucion.sql  query_historico.sql  query_relaciones.sql  serie_temporal.sql
scripts/: connection_elektra.py  query_executor.py
