[project]
name = "dashboard-elektra"
version = "0.1.0"
description = ""
authors = [
    {name = "alejolop1",email = "clalejo.0803@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.42.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "mysql-connector (>=2.2.9,<3.0.0)",
    "mysql-connector-python (>=9.2.0,<10.0.0)",
    "sshtunnel (>=0.4.0,<0.5.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
